# vk

./: CMakeLists.txt  shellUbuntu.nix  style.md
include/: arena.hpp  nums.hpp  renderer.hpp  scoped.hpp  shader.hpp  sugar.hpp  vma.hpp
src/: main.cpp  renderer.cpp  shader.cpp  vma.cpp
src/shaders/: triangle.slang
